lesson28_nfs/roles/nfs_srv/files/firewall.rules
*nat
:PREROUTING ACCEPT [16:1848]
:INPUT ACCEPT [15:1272]
:OUTPUT ACCEPT [32:2396]
:POSTROUTING ACCEPT [32:2396]
COMMIT
# Completed on Tue Aug 28 19:26:31 2018
# Generated by iptables-save v1.4.21 on Tue Aug 28 19:26:31 2018
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:TRAF - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -i eth0 -j ACCEPT
-A INPUT -i eth1 -j TRAF
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -o eth0 -j ACCEPT
-A OUTPUT -o eth1 -j ACCEPT
-A TRAF -p icmp -m icmp --icmp-type any -j ACCEPT
-A TRAF -p tcp -m tcp --dport 22 -j ACCEPT
-A TRAF -p udp -m udp --dport 2049 -j ACCEPT
-A TRAF -p tcp -m tcp --dport 2049 -j ACCEPT
-A TRAF -p udp -m udp --dport 111 -j ACCEPT
-A TRAF -p tcp -m tcp --dport 111 -j ACCEPT
-A TRAF -p udp -m udp --dport 20048 -j ACCEPT
-A TRAF -p udp -m udp --dport 32803 -j ACCEPT
-A TRAF -p tcp -m tcp --dport 32803 -j ACCEPT
-A TRAF -j DROP
COMMIT
